--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.7",
     "@tiptap/extension-bold": "^2.12.0",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
@@ -47,11 +46,16 @@
     "uuid4": "^2.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8",
+    "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
     "postcss-load-config": "^6.0.1",
     "sass": "^1.89.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
